# boidsish

./: .clang-format  .gitignore  .gitmodules  BUG_REPORT.md  CMakeLists.txt  Makefile  README.md  alignment_check  alignment_check.cpp  artistic_log.txt  binding_registry.h  binding_set.h  boidsish  boidsish.ini  boidsish.ini.bak2  boidsish.ini.bak43  build_output.txt  check_alignment  check_alignment.cpp  check_output.txt  check_ubo_alignment  check_ubo_alignment.cpp  check_ubo_size  check_ubo_size.cpp  core_dumps.source  demo_output.txt  diagnostic.txt  fix_include.py  fix_include_am.py  fix_include_graphics.py  glcheck_output.txt  gpu_migration_plan.md  graphics_snippet.txt  imgui.ini  lighting_test.glsl  log.txt  make_check_output.txt  make_glcheck_output.txt  noises.txt  offset_check  (+15 more)
.github/workflows/: cmake-multi-platform.yml
.jules/: INSIGHTS.md  PERFORMANCE_LOG.md
CPM_modules/: FindFastSIMD.cmake
app/JetTimeMoFo/: main.cpp
app/WindDrifter/: main.cpp
app/kittywumpus/: ROADMAP.md  main.cpp
assets/: Mesh_Goose.mtl  dialogue_grammar.txt  dialogue_terminals.txt  quad.mtl  quickMissileLauncher.mtl  quickMissileLauncher8.glb  wordnet_sample.json  wordnet_subset.txt
examples/: Makefile  advanced.cpp  advanced_examples.cpp  arrow_demo.cpp  artistic.cpp  artistic_demo.cpp  audio_demo.cpp  basic.cpp  basic_demo.cpp  collision_example.cpp  colossal_demo.cpp  entity.cpp  entity_example.cpp  field_example.cpp  fighter_demo.cpp  fire_demo.cpp  flight.cpp  flight_simulator.cpp  flocking_demo.cpp  flocking_terrain.cpp  full_collision_example.cpp  graph_avoidance_example.cpp  graph_demo.cpp  hud_demo.cpp  interactive_demo.cpp  model_demo.cpp  model_loading.cpp  newUI.cpp  noise_generator.cpp  obj_shape_demo.cpp  paper_plane.cpp  particle_flow.cpp  path_camera_demo.cpp  path_constraint_demo.cpp  path_demo.cpp  pathfinding_demo.cpp  physics_demo.cpp  point_cloud.cpp  procedural_head_demo.cpp  raycast_example.cpp  (+11 more)
examples/accelerator_demo/: main.cpp
examples/advanced/: main.cpp
examples/alien_plant_demo/: main.cpp
examples/ambient_camera_visualizer/: main.cpp
examples/ambient_mode/: main.cpp
examples/ambient_overhaul/: main.cpp
examples/animation_demo/: main.cpp
examples/arcade_text/: main.cpp
examples/arrow_demo/: main.cpp
examples/artistic/: main.cpp
examples/atmosphere_designer/: main.cpp
examples/audio_demo/: main.cpp
examples/basic/: main.cpp
examples/bindless_demo/: main.cpp
examples/biome_demo/: main.cpp
examples/cave_demo/: main.cpp
examples/checkpoint_demo/: main.cpp
examples/city_demo/: main.cpp
examples/cloud_test/: main.cpp
examples/complex_explosion_test/: main.cpp
examples/complex_path_demo/: main.cpp
examples/curved_text/: main.cpp
examples/cylinder_hole/: main.cpp
examples/decor_bvh_test/: main.cpp
examples/decor_query/: main.cpp
examples/decor_raytracing/: main.cpp
examples/delaunay_blob_demo/: main.cpp
examples/dissolve_demo/: main.cpp
include/: Config.h  ConfigManager.h  FloorManager.h  IManager.h  IWidget.h  NoiseManager.h  ReactionDiffusionManager.h  ResourceManager.h  RestirManager.h  Scene.h  SceneManager.h  ScriptManager.h  SkyboxManager.h  Tree.h  TreeManager.h  TreeTypes.h  UIConfigManager.h  UIManager.h  aircraft_shape.h  akira_effect.h  ambient_camera.h  anim_data.h  animation.h  animator.h  arcade_text.h  arrow.h  asset_manager.h  assimp_glm_helpers.h  atmosphere_manager.h  audio_manager.h  audio_types.h  binding_registry.h  binding_set.h  bindless_texture.h  bindless_texture_manager.h  biome.h  biome_properties.h  boidsish.h  bone.h  bvh_spatial_structure.h  (+165 more)
shaders/: akira.frag  akira.vert  application.frag  application.tcs  application.tes  application.vert  artistic_effects.frag  artistic_effects.glsl  artistic_effects.vert  background.fs  background.vs  bindless_demo.frag  blue_noise_gen.comp  blur.frag  blur.vert  checkpoint.frag  checkpoint.vert  common_uniforms.glsl  complex_path.frag  complex_path.vert  cull.comp  debug.geom  debug.vert  debug_occluders.frag  decor_cull.comp  decor_placement.comp  decor_update_commands.comp  depth.frag  dot.fs  dot.vs  edge.fs  edge.vs  fire.comp  fire.frag  fire.geom  fire.vert  fire_behavior.comp  fire_geom.frag  fire_lifecycle.comp  frag.fs  (+164 more)
shaders_preprocessed/: temporal_accumulation.comp  unified_screen_space.comp  unified_screen_space_composite.frag
src/: Config.cpp  ConfigManager.cpp  FloorManager.cpp  NoiseManager.cpp  ReactionDiffusionManager.cpp  ResourceManager.cpp  RestirManager.cpp  SceneManager.cpp  ScriptManager.cpp  SkyboxManager.cpp  Tree.cpp  TreeManager.cpp  UIConfigManager.cpp  UIManager.cpp  akira_effect.cpp  ambient_camera.cpp  animation.cpp  animator.cpp  arcade_text.cpp  arrow.cpp  asset_manager.cpp  atmosphere_manager.cpp  audio_manager.cpp  bindless_texture.cpp  bindless_texture_manager.cpp  boidsish.cpp  bone.cpp  bvh_spatial_structure.cpp  cave.cpp  cave_generator.cpp  checkpoint_ring.cpp  checkpoint_spline.cpp  chunk_graph.cpp  clone_manager.cpp  collision_shapes.cpp  complex_path.cpp  curved_text.cpp  debug_cone.cpp  debug_laser.cpp  decor_manager.cpp  (+113 more)
tests/: collision_test.cpp  standalone_rocket_voxel_test.cpp  test_bvh_spatial.cpp  test_camera_system.cpp  test_concurrent_queue.cpp  test_config.cpp  test_cyk_parsing.cpp  test_deformation_overlap.cpp  test_ik.cpp  test_ik_robust.cpp  test_logger.cpp  test_mesh_optimizer.cpp  test_model_slice.cpp  test_mood_manager.cpp  test_offsets.cpp  test_opengl_buffer.cpp  test_polyhedron.cpp  test_polyhedron_movement.cpp  test_pool.cpp  test_procedural_custom.cpp  test_procedural_enhancements.cpp  test_procedural_generator.cpp  test_procedural_walking.cpp  test_rigid_body.cpp  test_shader_framework.cpp  test_shader_preprocessor.cpp  test_shape_scaling.cpp  test_shape_shadows.cpp  test_spline.cpp  test_terrain.cpp  test_thread_pool.cpp  test_vector.cpp  test_weather.cpp  test_weather_lbm.cpp  test_weather_regression.cpp
tools/: model_converter.cpp  model_to_sdf.cpp  shader_preprocessor.cpp  terrain_analyzer.cpp  test_assimp_export.cpp  wordnet_compiler.cpp  wordnets.py
(+601 files in other folders)
